--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^8.6.3",
     "morgan": "~1.9.1",
     "teamproject": "file:"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
